Add a command to toggle the source list

--- a/CleanRoom/Base.lproj/MainMenu.xib
+++ b/CleanRoom/Base.lproj/MainMenu.xib
@@ -620,6 +620,13 @@
                                     <action selector="runToolbarCustomizationPalette:" target="-1" id="pQI-g3-MTW"/>
                                 </connections>
                             </menuItem>
+                            <menuItem isSeparatorItem="YES" id="Pjt-IL-4WL"/>
+                            <menuItem title="Toggle Source List" keyEquivalent="s" id="p0I-KC-jCO">
+                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
+                                <connections>
+                                    <action selector="toggleSourceList:" target="-1" id="8Py-vn-JdH"/>
+                                </connections>
+                            </menuItem>
                         </items>
                     </menu>
                 </menuItem>
