--- a/CleanRoom/Base.lproj/MainWindow.xib
+++ b/CleanRoom/Base.lproj/MainWindow.xib
@@ -34,8 +34,63 @@
                             <customView id="eTW-wC-kct">
                                 <rect key="frame" x="162" y="0.0" width="318" height="270"/>
                                 <autoresizingMask key="autoresizingMask"/>
+                                <subviews>
+                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="6ZR-uc-6Ov">
+                                        <rect key="frame" x="71" y="104" width="176" height="62"/>
+                                        <subviews>
+                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jEX-hN-o6t">
+                                                <rect key="frame" x="18" y="22" width="61" height="17"/>
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Duration:" id="DCa-IR-k0C">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="391-Gj-Ax2">
+                                                <rect key="frame" x="85" y="20" width="50" height="22"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="kqw-hM-sFH"/>
+                                                </constraints>
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="right" title="0.5" drawsBackground="YES" id="Ph6-eg-Me9">
+                                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="0Vv-Je-uGH">
+                                                        <real key="minimum" value="0.0"/>
+                                                        <real key="maximum" value="5"/>
+                                                        <metadata>
+                                                            <real key="inspectorSampleValue" value="0.5"/>
+                                                        </metadata>
+                                                    </numberFormatter>
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                                <connections>
+                                                    <binding destination="-2" name="value" keyPath="duration" id="Zp1-8R-Sb3"/>
+                                                </connections>
+                                            </textField>
+                                            <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="14V-Dy-zh7">
+                                                <rect key="frame" x="140" y="17" width="19" height="27"/>
+                                                <stepperCell key="cell" continuous="YES" alignment="left" increment="0.10000000000000001" maxValue="5" doubleValue="0.5" id="tfN-Uw-e79"/>
+                                                <connections>
+                                                    <binding destination="-2" name="value" keyPath="duration" id="zom-TN-9VC"/>
+                                                </connections>
+                                            </stepper>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="14V-Dy-zh7" secondAttribute="trailing" constant="20" symbolic="YES" id="ANp-d9-9jH"/>
+                                            <constraint firstItem="391-Gj-Ax2" firstAttribute="leading" secondItem="jEX-hN-o6t" secondAttribute="trailing" constant="8" symbolic="YES" id="IQT-87-IFP"/>
+                                            <constraint firstItem="391-Gj-Ax2" firstAttribute="top" secondItem="6ZR-uc-6Ov" secondAttribute="top" constant="20" symbolic="YES" id="KGe-hz-ELt"/>
+                                            <constraint firstItem="jEX-hN-o6t" firstAttribute="leading" secondItem="6ZR-uc-6Ov" secondAttribute="leading" constant="20" symbolic="YES" id="PMm-yL-fOv"/>
+                                            <constraint firstAttribute="bottom" secondItem="391-Gj-Ax2" secondAttribute="bottom" constant="20" symbolic="YES" id="PZD-3v-oHd"/>
+                                            <constraint firstItem="14V-Dy-zh7" firstAttribute="centerY" secondItem="391-Gj-Ax2" secondAttribute="centerY" id="UXK-TO-Eki"/>
+                                            <constraint firstItem="14V-Dy-zh7" firstAttribute="leading" secondItem="391-Gj-Ax2" secondAttribute="trailing" constant="8" id="jKU-kb-4Cp"/>
+                                            <constraint firstItem="jEX-hN-o6t" firstAttribute="baseline" secondItem="391-Gj-Ax2" secondAttribute="baseline" id="jmX-Dq-YdX"/>
+                                        </constraints>
+                                    </customView>
+                                </subviews>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="Qu2-XW-Otc"/>
+                                    <constraint firstAttribute="centerY" secondItem="6ZR-uc-6Ov" secondAttribute="centerY" id="ZY1-86-Huu"/>
+                                    <constraint firstAttribute="centerX" secondItem="6ZR-uc-6Ov" secondAttribute="centerX" id="Zrd-Ox-M2H"/>
                                 </constraints>
                             </customView>
                         </subviews>
