Source list scroll view is layer backed.
This avoids some nasty display glitches during the animation.

--- a/CleanRoom/Base.lproj/SourceList.xib
+++ b/CleanRoom/Base.lproj/SourceList.xib
@@ -14,7 +14,7 @@
         <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe">
             <rect key="frame" x="0.0" y="0.0" width="240" height="416"/>
             <subviews>
-                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xus-2p-fhD">
+                <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xus-2p-fhD">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="416"/>
                     <clipView key="contentView" drawsBackground="NO" id="DEi-ik-Af9">
                         <rect key="frame" x="1" y="0.0" width="238" height="134"/>
