--- a/CleanRoom/Base.lproj/SourceList.xib
+++ b/CleanRoom/Base.lproj/SourceList.xib
@@ -6,98 +6,86 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SourceListController" customModule="CleanRoom" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="c22-O7-iKe" id="J00-Oi-MwV"/>
+                <outlet property="view" destination="Xus-2p-fhD" id="o8C-HC-i2D"/>
             </connections>
         </customObject>
+        <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xus-2p-fhD">
+            <rect key="frame" x="0.0" y="0.0" width="240" height="416"/>
+            <clipView key="contentView" drawsBackground="NO" id="DEi-ik-Af9">
+                <rect key="frame" x="1" y="0.0" width="238" height="134"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <subviews>
+                    <tableView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" id="2S0-Cb-3jO">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <size key="intercellSpacing" width="3" height="2"/>
+                        <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                        <tableColumns>
+                            <tableColumn width="237" minWidth="40" maxWidth="1000" id="ZyA-i8-2CS">
+                                <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                    <font key="font" metaFont="smallSystem"/>
+                                    <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                </tableHeaderCell>
+                                <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="HRC-9P-bnN">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                                <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                <prototypeCellViews>
+                                    <tableCellView id="j9T-Yz-5In">
+                                        <rect key="frame" x="1" y="1" width="237" height="24"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <subviews>
+                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lSd-W6-73I">
+                                                <rect key="frame" x="20" y="2" width="17" height="18"/>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSBookmarksTemplate" id="SKQ-zF-68y"/>
+                                            </imageView>
+                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="5QY-Oj-ywZ">
+                                                <rect key="frame" x="43" y="3" width="176" height="17"/>
+                                                <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="Pvl-Qt-yvU">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                                <connections>
+                                                    <binding destination="j9T-Yz-5In" name="value" keyPath="objectValue" id="4sk-RV-uq7"/>
+                                                </connections>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="centerY" secondItem="lSd-W6-73I" secondAttribute="centerY" constant="-1" id="72y-fA-MKR"/>
+                                            <constraint firstAttribute="centerY" secondItem="5QY-Oj-ywZ" secondAttribute="centerY" id="GtY-Jl-ukQ"/>
+                                            <constraint firstItem="5QY-Oj-ywZ" firstAttribute="leading" secondItem="lSd-W6-73I" secondAttribute="trailing" constant="8" symbolic="YES" id="HaS-T1-byk"/>
+                                            <constraint firstItem="lSd-W6-73I" firstAttribute="leading" secondItem="j9T-Yz-5In" secondAttribute="leading" constant="20" symbolic="YES" id="gOl-Ih-Es4"/>
+                                            <constraint firstAttribute="trailing" secondItem="5QY-Oj-ywZ" secondAttribute="trailing" constant="20" symbolic="YES" id="w4D-fa-ejf"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="textField" destination="5QY-Oj-ywZ" id="nk1-i2-JB7"/>
+                                        </connections>
+                                    </tableCellView>
+                                </prototypeCellViews>
+                            </tableColumn>
+                        </tableColumns>
+                        <connections>
+                            <outlet property="dataSource" destination="-2" id="tNO-cu-6li"/>
+                        </connections>
+                    </tableView>
+                </subviews>
+                <nil key="backgroundColor"/>
+            </clipView>
+            <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="fBu-Tx-d6T">
+                <rect key="frame" x="1" y="119" width="223" height="15"/>
+                <autoresizingMask key="autoresizingMask"/>
+            </scroller>
+            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="HlC-aX-RcX">
+                <rect key="frame" x="224" y="17" width="15" height="102"/>
+                <autoresizingMask key="autoresizingMask"/>
+            </scroller>
+        </scrollView>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="416"/>
-            <subviews>
-                <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xus-2p-fhD">
-                    <rect key="frame" x="0.0" y="0.0" width="240" height="416"/>
-                    <clipView key="contentView" drawsBackground="NO" id="DEi-ik-Af9">
-                        <rect key="frame" x="1" y="0.0" width="238" height="134"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" id="2S0-Cb-3jO">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <size key="intercellSpacing" width="3" height="2"/>
-                                <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
-                                <tableColumns>
-                                    <tableColumn width="237" minWidth="40" maxWidth="1000" id="ZyA-i8-2CS">
-                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
-                                            <font key="font" metaFont="smallSystem"/>
-                                            <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                        </tableHeaderCell>
-                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="HRC-9P-bnN">
-                                            <font key="font" metaFont="system"/>
-                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
-                                        <prototypeCellViews>
-                                            <tableCellView id="j9T-Yz-5In">
-                                                <rect key="frame" x="1" y="1" width="237" height="24"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                <subviews>
-                                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lSd-W6-73I">
-                                                        <rect key="frame" x="20" y="2" width="17" height="18"/>
-                                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSBookmarksTemplate" id="SKQ-zF-68y"/>
-                                                    </imageView>
-                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="5QY-Oj-ywZ">
-                                                        <rect key="frame" x="43" y="3" width="176" height="17"/>
-                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="Pvl-Qt-yvU">
-                                                            <font key="font" metaFont="system"/>
-                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                        </textFieldCell>
-                                                        <connections>
-                                                            <binding destination="j9T-Yz-5In" name="value" keyPath="objectValue" id="4sk-RV-uq7"/>
-                                                        </connections>
-                                                    </textField>
-                                                </subviews>
-                                                <constraints>
-                                                    <constraint firstAttribute="centerY" secondItem="lSd-W6-73I" secondAttribute="centerY" constant="-1" id="72y-fA-MKR"/>
-                                                    <constraint firstAttribute="centerY" secondItem="5QY-Oj-ywZ" secondAttribute="centerY" id="GtY-Jl-ukQ"/>
-                                                    <constraint firstItem="5QY-Oj-ywZ" firstAttribute="leading" secondItem="lSd-W6-73I" secondAttribute="trailing" constant="8" symbolic="YES" id="HaS-T1-byk"/>
-                                                    <constraint firstItem="lSd-W6-73I" firstAttribute="leading" secondItem="j9T-Yz-5In" secondAttribute="leading" constant="20" symbolic="YES" id="gOl-Ih-Es4"/>
-                                                    <constraint firstAttribute="trailing" secondItem="5QY-Oj-ywZ" secondAttribute="trailing" constant="20" symbolic="YES" id="w4D-fa-ejf"/>
-                                                </constraints>
-                                                <connections>
-                                                    <outlet property="textField" destination="5QY-Oj-ywZ" id="nk1-i2-JB7"/>
-                                                </connections>
-                                            </tableCellView>
-                                        </prototypeCellViews>
-                                    </tableColumn>
-                                </tableColumns>
-                                <connections>
-                                    <outlet property="dataSource" destination="-2" id="tNO-cu-6li"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <nil key="backgroundColor"/>
-                    </clipView>
-                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="fBu-Tx-d6T">
-                        <rect key="frame" x="1" y="119" width="223" height="15"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </scroller>
-                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="HlC-aX-RcX">
-                        <rect key="frame" x="224" y="17" width="15" height="102"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </scroller>
-                </scrollView>
-            </subviews>
-            <constraints>
-                <constraint firstItem="Xus-2p-fhD" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="71I-BT-S7I"/>
-                <constraint firstAttribute="trailing" secondItem="Xus-2p-fhD" secondAttribute="trailing" id="9fw-5R-y4L"/>
-                <constraint firstItem="Xus-2p-fhD" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="OIt-kA-dx0"/>
-                <constraint firstAttribute="bottom" secondItem="Xus-2p-fhD" secondAttribute="bottom" id="yfX-Bs-ufr"/>
-            </constraints>
-            <point key="canvasLocation" x="249" y="440"/>
-        </customView>
     </objects>
     <resources>
         <image name="NSBookmarksTemplate" width="17" height="18"/>
