--- a/CleanRoom/Base.lproj/SourceList.xib
+++ b/CleanRoom/Base.lproj/SourceList.xib
@@ -75,6 +75,9 @@
                 </subviews>
                 <nil key="backgroundColor"/>
             </clipView>
+            <constraints>
+                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="eGQ-Nk-nI4"/>
+            </constraints>
             <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="fBu-Tx-d6T">
                 <rect key="frame" x="1" y="119" width="223" height="15"/>
                 <autoresizingMask key="autoresizingMask"/>
