--- a/CleanRoom/Base.lproj/SourceList.xib
+++ b/CleanRoom/Base.lproj/SourceList.xib
@@ -9,8 +9,9 @@
                 <outlet property="view" destination="Xus-2p-fhD" id="o8C-HC-i2D"/>
             </connections>
         </customObject>
-        <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xus-2p-fhD">
+        <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="Xus-2p-fhD">
             <rect key="frame" x="0.0" y="0.0" width="240" height="416"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <clipView key="contentView" drawsBackground="NO" id="DEi-ik-Af9">
                 <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -75,9 +76,6 @@
                 </subviews>
                 <nil key="backgroundColor"/>
             </clipView>
-            <constraints>
-                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="eGQ-Nk-nI4"/>
-            </constraints>
             <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="fBu-Tx-d6T">
                 <rect key="frame" x="1" y="119" width="223" height="15"/>
                 <autoresizingMask key="autoresizingMask"/>
