--- a/MDPSplitViewDemo/Base.lproj/SourceList.xib
+++ b/MDPSplitViewDemo/Base.lproj/SourceList.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C68m" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="SourceListController" customModule="CleanRoom" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="SourceListController" customModule="MDPSplitViewDemo" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="Xus-2p-fhD" id="o8C-HC-i2D"/>
             </connections>
@@ -75,6 +75,9 @@
                 </subviews>
                 <nil key="backgroundColor"/>
             </clipView>
+            <constraints>
+                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="aYR-Ee-sOE"/>
+            </constraints>
             <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="fBu-Tx-d6T">
                 <rect key="frame" x="1" y="119" width="223" height="15"/>
                 <autoresizingMask key="autoresizingMask"/>
